sum syntax cleanup