@@ -10,7 +10,7 @@ public class RomP28 extends RomOBD1 implements IRomP28 {
 	class RomP28Capabilities extends RomCapabilities {
 		RomP28Capabilities() {
 			this.capVtec = true;
-			this.capEld = false; // FIXME: unknown
+			this.capEld  = false;  // FIXME: unknown
 		}
 
 		@Override
@@ -31,70 +31,46 @@ public class RomP28 extends RomOBD1 implements IRomP28 {
 	}
 
 	class RomP28Constants {
-
 		private static final int sAddressHighCamFuelMultiplierTable = 0x71EA;
-
 		private static final int sAddressHighCamFuelTable = 0x7122;
-
 		private static final int sAddressHighCamIgnitionAdvanceTable = 0x73AC;
-
 		private static final int sAddressHighCamMAPScalars = 0x700a;
-
 		private static final int sAddressHighCamRPMScalars = 0x7028;
-
 		private static final int sAddressLowCamFuelMultiplierTable = 0x7118;
-
 		private static final int sAddressLowCamFuelTable = 0x7050;
-
 		private static final int sAddressLowCamIgnitionAdvanceTable = 0x72E4;
-
 		private static final int sAddressLowCamMAPScalars = 0x7000;
-
 		private static final int sAddressLowCamRPMScalars = 0x7014;
-
 		private static final int sAddressVtecDisable = 0x60FA;
-
 		private static final int sNrMapScalars = 10;
-		
 		private static final int sNrRpmScalars = 20;
 	}
 
 	class RomP28NonVtecFuelMap extends RomFuelMap {
 		public RomP28NonVtecFuelMap() {
-			this.values = new Float[RomP28Constants.sNrMapScalars][RomP28Constants.sNrRpmScalars];
+			this.values     = new Float[RomP28Constants.sNrMapScalars][RomP28Constants.sNrRpmScalars];
 			this.mapScalars = RomP28.this.getNonVtecMapScalars();
 			this.rpmScalars = RomP28.this.getNonVtecRpmScalars();
 
 			for (int map = 0; map < this.mapScalars.length; map++)
 				for (int rpm = 0; rpm < this.rpmScalars.length; rpm++) {
-					Integer addressFuelTableLocation = new Integer(
-							RomP28Constants.sAddressLowCamFuelTable + rpm
-									* RomP28Constants.sNrMapScalars + map);
-					Integer addressFuelMultiplierTable = new Integer(
-							RomP28Constants.sAddressLowCamFuelMultiplierTable
-									+ map);
+					var addressFuelTableLocation   = Integer.valueOf(RomP28Constants.sAddressLowCamFuelTable + rpm * RomP28Constants.sNrMapScalars + map);
+					var addressFuelMultiplierTable = Integer.valueOf(RomP28Constants.sAddressLowCamFuelMultiplierTable + map);
 
-					this.values[map][rpm] = new Float(
-							(readUnsignedByteAt(addressFuelTableLocation) * readUnsignedByteAt(addressFuelMultiplierTable)) / 4.f);
+					this.values[map][rpm] = Float.valueOf((readUnsignedByteAt(addressFuelTableLocation) * readUnsignedByteAt(addressFuelMultiplierTable)) / 4.f);
 				}
 		}
 	}
 
 	class RomP28NonVtecIgnitionMap extends RomIgnitionMap {
 		public RomP28NonVtecIgnitionMap() {
-			this.values = new Float[RomP28Constants.sNrMapScalars][RomP28Constants.sNrRpmScalars];
+			this.values     = new Float[RomP28Constants.sNrMapScalars][RomP28Constants.sNrRpmScalars];
 			this.mapScalars = RomP28.this.getNonVtecMapScalars();
 			this.rpmScalars = RomP28.this.getNonVtecRpmScalars();
 
 			for (int map = 0; map < this.mapScalars.length; map++)
-				for (int rpm = 0; rpm < this.rpmScalars.length; rpm++) {
-					this.values[map][rpm] = new Float(
-							(readUnsignedByteAt(new Integer(
-									RomP28Constants.sAddressLowCamIgnitionAdvanceTable
-											+ rpm
-											* RomP28Constants.sNrMapScalars
-											+ map)) - 24) / 4.);
-				}
+				for (int rpm = 0; rpm < this.rpmScalars.length; rpm++)
+					this.values[map][rpm] = Float.valueOf((float)((readUnsignedByteAt(Integer.valueOf(RomP28Constants.sAddressLowCamIgnitionAdvanceTable + rpm * RomP28Constants.sNrMapScalars + map)) - 24) / 4.0));
 		}
 	}
 
@@ -106,15 +82,10 @@ public class RomP28 extends RomOBD1 implements IRomP28 {
 
 			for (int map = 0; map < this.mapScalars.length; map++)
 				for (int rpm = 0; rpm < this.rpmScalars.length; rpm++) {
-					Integer addressFuelTableLocation = new Integer(
-							RomP28Constants.sAddressHighCamFuelTable + rpm
-									* RomP28Constants.sNrMapScalars + map);
-					Integer addressFuelMultiplierTable = new Integer(
-							RomP28Constants.sAddressHighCamFuelMultiplierTable
-									+ map);
+					var addressFuelTableLocation   = Integer.valueOf(RomP28Constants.sAddressHighCamFuelTable + rpm * RomP28Constants.sNrMapScalars + map);
+					var addressFuelMultiplierTable = Integer.valueOf(RomP28Constants.sAddressHighCamFuelMultiplierTable + map);
 
-					this.values[map][rpm] = new Float(
-							(readUnsignedByteAt(addressFuelTableLocation) * readUnsignedByteAt(addressFuelMultiplierTable)) / 4.f);
+					this.values[map][rpm] = Float.valueOf((readUnsignedByteAt(addressFuelTableLocation) * readUnsignedByteAt(addressFuelMultiplierTable)) / 4.f);
 				}
 		}
 	}
@@ -126,102 +97,81 @@ public class RomP28 extends RomOBD1 implements IRomP28 {
 			this.rpmScalars = RomP28.this.getVtecRpmScalars();
 
 			for (int map = 0; map < this.mapScalars.length; map++)
-				for (int rpm = 0; rpm < this.rpmScalars.length; rpm++) {
-					this.values[map][rpm] = new Float(
-							(readUnsignedByteAt(new Integer(
-									RomP28Constants.sAddressHighCamIgnitionAdvanceTable
-											+ rpm
-											* RomP28Constants.sNrMapScalars
-											+ map)) - 24) / 4.);
-				}
+				for (int rpm = 0; rpm < this.rpmScalars.length; rpm++)
+					this.values[map][rpm] = Float.valueOf((readUnsignedByteAt(Integer.valueOf(RomP28Constants.sAddressHighCamIgnitionAdvanceTable + rpm * RomP28Constants.sNrMapScalars + map)) - 24) / 4.0f);
 		}
 	}
 
 	private Integer[] mapNonVtecScalars = null;
-
 	private Integer[] mapVtecScalars = null;
-
 	private Integer[] rpmNonVtecScalars = null;
-
 	private Integer[] rpmVtecScalars = null;
 
-	public RomP28(String filename) throws InvalidRomException,
-			WrongRomHandlerException {
+	public RomP28(String filename) throws InvalidRomException, WrongRomHandlerException {
 		super(IRom.RomTypes.P28);
+
 		try {
 			this.readRom(filename);
 		} catch (Exception e) {
 			throw new InvalidRomException();
 		}
-		if (this.readUnsignedByteAt(0) != 237
-				|| this.readUnsignedByteAt(1) != 36)
-			throw new WrongRomHandlerException();
+
+		if (this.readUnsignedByteAt(0) != 237 || this.readUnsignedByteAt(1) != 36) throw new WrongRomHandlerException();
+
 		this.romMaps.put(TableType.FUEL_VTEC, new RomP28VtecFuelMap());
 		this.romMaps.put(TableType.FUEL_NO_VTEC, new RomP28NonVtecFuelMap());
 		this.romMaps.put(TableType.IGNITION_VTEC, new RomP28VtecIgnitionMap());
-		this.romMaps.put(TableType.IGNITION_NO_VTEC,
-				new RomP28NonVtecIgnitionMap());
+		this.romMaps.put(TableType.IGNITION_NO_VTEC, new RomP28NonVtecIgnitionMap());
 		this.romCaps = new RomP28Capabilities();
-
 	}
 
 	protected Integer[] getNonVtecMapScalars() {
-		if (this.mapNonVtecScalars != null)
-			return this.mapNonVtecScalars;
+		if (this.mapNonVtecScalars != null) return this.mapNonVtecScalars;
 
 		this.mapNonVtecScalars = new Integer[RomP28Constants.sNrMapScalars];
-		for (int map = 0; map < RomP28Constants.sNrMapScalars; map++)
-			this.mapNonVtecScalars[map] = new Integer((1764 / 255)
-					* readUnsignedByteAt(new Integer(
-							RomP28Constants.sAddressLowCamMAPScalars + map)));
+		for (int map = 0; map < RomP28Constants.sNrMapScalars; map++) this.mapNonVtecScalars[map] = Integer.valueOf((1764 / 255) * readUnsignedByteAt(Integer.valueOf(RomP28Constants.sAddressLowCamMAPScalars + map)));
+
 		return this.getNonVtecMapScalars();
 	}
 
 	protected Integer[] getNonVtecRpmScalars() {
-		if (this.rpmNonVtecScalars != null)
-			return this.rpmNonVtecScalars;
+		if (this.rpmNonVtecScalars != null) return this.rpmNonVtecScalars;
 
 		this.rpmNonVtecScalars = new Integer[RomP28Constants.sNrRpmScalars];
 
 		for (int rpm = 0; rpm < RomP28Constants.sNrRpmScalars; rpm++) {
 			// http://www.pgmfi.org/twiki/bin/view/Library/OBD1_8bitLowCamRPM
 			// FIXME: Calculations are a bit off???
-			int value = readUnsignedByteAt(new Integer(
-					RomP28Constants.sAddressLowCamRPMScalars + rpm));
+
+			int value = readUnsignedByteAt(Integer.valueOf(RomP28Constants.sAddressLowCamRPMScalars + rpm));
 			int h = value / 64;
 			int x = h - 1 > 0 ? h - 1 : 0;
 			int l = value + (x * 64);
 			int r = (1875000 * l * 2 ^ h) / 240000;
-			this.rpmNonVtecScalars[rpm] = new Integer(r);
+
+			this.rpmNonVtecScalars[rpm] = Integer.valueOf(r);
 		}
 
 		return this.getNonVtecRpmScalars();
 	}
 
 	protected Integer[] getVtecMapScalars() {
-		if (this.mapVtecScalars != null)
-			return this.mapVtecScalars;
+		if (this.mapVtecScalars != null) return this.mapVtecScalars;
+
 		this.mapVtecScalars = new Integer[RomP28Constants.sNrMapScalars];
-		for (int map = 0; map < RomP28Constants.sNrMapScalars; map++)
-			this.mapVtecScalars[map] = new Integer((1764 / 255)
-					* readUnsignedByteAt(
-							new Integer(
-									RomP28Constants.sAddressHighCamMAPScalars
-											+ map)));
+		for (int map = 0; map < RomP28Constants.sNrMapScalars; map++) this.mapVtecScalars[map] = Integer.valueOf((1764 / 255) * readUnsignedByteAt(Integer.valueOf(RomP28Constants.sAddressHighCamMAPScalars + map)));
+
 		return this.getVtecMapScalars();
 	}
 
 	protected Integer[] getVtecRpmScalars() {
-		if (this.rpmVtecScalars != null)
-			return this.rpmVtecScalars;
+		if (this.rpmVtecScalars != null) return this.rpmVtecScalars;
+
 		this.rpmVtecScalars = new Integer[RomP28Constants.sNrRpmScalars];
+
 		for (int rpm = 0; rpm < RomP28Constants.sNrRpmScalars; rpm++)
 			// http://www.pgmfi.org/twiki/bin/view/Library/OBD1_8bitHighCamRPM
-			this.rpmVtecScalars[rpm] = new Integer((1875000 * this
-					.readUnsignedByteAt(
-							new Integer(
-									RomP28Constants.sAddressHighCamRPMScalars
-											+ rpm))) / 53248);
+			this.rpmVtecScalars[rpm] = Integer.valueOf((1875000 * this.readUnsignedByteAt(Integer.valueOf(RomP28Constants.sAddressHighCamRPMScalars + rpm))) / 53248);
 
 		return this.getVtecRpmScalars();
 	}
